<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Temp Converter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="convert">Convert:</string>
    <string name="prompt">Enter temp</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="convertButton">Convert</string>
    <string name="conversionFormula">Conversion Formula:</string>
    <string name="unitsErrorMessage">Units must be different</string>
    <string name="wrongInputMessage">Please enter a valid number.</string>
    <string name="reset">Reset</string>
    <string name="alertTitle">Wrong Input</string>

</resources>
